kubernetes/apps/flux-system/flux-instance/app/github/webhooks/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-webhook
spec:
  hostnames: ["flux-webhook.rphilipsen.nl"]
  parentRefs:
    - name: agentgateway-internal
      namespace: network
      sectionName: https
    - name: agentgateway-external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: webhook-receiver
          namespace: flux-system
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /hook/
